--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="state_on_loading">加载中…</string>
     <string name="state_on_failure">加载失败…</string>
     <string name="state_on_empty">数据为空…</string>
+    <string name="setting">设置</string>
 </resources>
